...
            fontStyle: FontStyle.italic,
          ),
        ),
        const SizedBox(height: 20),
        _loading
            ? const CircularProgressIndicator()
            : CustomButton(text: "Cadastrar", onPressed: _register),
      ],
    );
  }
}

